# SjaakII

./: CHANGES  CMakeLists.txt  sjaakii.pod  variants.txt
MSVS2012/: SjaakII.sln  SjaakII.vcxproj  SjaakII.vcxproj.filters
MSVS2015/: SjaakII.props  SjaakII.sln  SjaakII.vcxproj  SjaakII.vcxproj.filters
cmake/: FileList.cmake  FindReadline.cmake
include/: aligned_malloc.h  ansi.h  assert.h  betza_string.h  bitboard.h  bits.h  bits128.h  bits32.h  bits64.h  board.h  board_rules.h  bool.h  cfgpath.h  chase.h  compilerdef.h  eval_param.h  eval_types.h  evalhash.h  evaluate.h  fen.h  game.h  genrand.h  hashkey.h  hashpath.h  hashtable.h  history.h  keypressed.h  killer.h  mate.h  move.h  moveflag.h  movegen.h  movelist.h  movestring.h  movetype.h  piece_rules.h  piece_types.h  pieces.h  pipe2.h  prefetch.h  (+13 more)
src/: chess.cc  sjef.c  test.cc  xboard.cc
src/eval/: pst.cc
src/hash/: evalhash.c  hashkey.c  hashtable.c
src/misc/: aligned_malloc.c  ansi.c  cfgpath.c  genrand.c  keypressed.c  pipe2.c  snprintf.c  softexp.c  sprt.c
src/rules/: bitboard.cc  game.cc  move.cc  san.cc  squares.cc
src/timer/: timer.c
